# chortest

./: .gitignore  .gitmodules  Dockerfile  INSTALL.md  README.md  interactive_sim.py  pyproject.toml  pytest.ini  setup.py  sl.py
.devcontainer/: devcontainer.json  docker-compose.extend.yml
chorparse/: cfsm.py  gchor.py  main.py
chortest/: .gitignore  __main__.py  cfsm.py  common.py  defaults.py  gchor.py  (+11 more)
chortest/chorgram/: .dockerignore  .gitignore  BranchingProperty.hs  CFSM.hs  GCGrammar.y  GCtoLatex.y  Misc.hs  PomsetSemantics.hs  SyntacticGlobalChoreographies.hs  SystemGrammar.y  SystemtoTikz.y  WellFormedness.hs  cfsm2tikz.hs  chorgram.cabal  chorgram.cfg  chorgram.hs  gc2dot.hs  gc2latex.hs  gc2pom.hs  gcunfold.hs  gmc.hs  project.hs  pytest.ini  tsof.hs  viewsystem.hs  wf.hs
chortest/chorgram/experiments/betty/: atm_iter_gmc.sys  atm_iter_refined.sys  atm_iter_wrong2.sys  atm_naive_gmc.sys  genserver.sys
chortest/chorgram/experiments/bottomup/: belgrade17.fsa  cfsm_of_slides.fsa  choice.sys  devteam.sys  fm.res  fm2.res  ice16.fsa  nonfifotest.fsa  nonminimal.fsa  pingpong.cwb  pingpong.fsa  pingpong.sys  pingpong_graph.txt  pingpong_graph_Sc.txt  pingpong_graph_Sh.txt  streetlight.fsa
chortest/chorgram/experiments/bottomup/behAPI_ice18/atm/: cfsmA.aut  cfsmB.aut  cfsmC.aut  in_sgg_parsed.txt
chortest/chorgram/experiments/bottomup/benchmark/gmc/: Bargain.fsa  FilterCollaboration.fsa  HealthSystem.fsa  Logistic.fsa  LogisticSelfLoops.fsa  SanitaryAgency.fsa  TPMContractGMC.fsa  alternatingthreebit.fsa  alternatingtwobit.fsa  runningExample.fsa
chortest/chorgram/experiments/bottomup/genserver/: genserver3.1  kent16Awareness.sys  kent16Naive.sys  kent16Representability.sys
chortest/chorgram/experiments/bottomup/ice17/: average-new-comm-nosend.fsa  average-new-comm.fsa  simple.sys  simple2.fsa
chortest/chorgram/experiments/bottomup/non-gmc/: CounterExample.txt
chortest/chorgram/experiments/bottomup/not_wb_but_good/: 2.fsa  ABchoice_and_independetAC.fsa  ABchoice_and_independetCD.fsa
chortest/chorgram/experiments/chortest/: atm.sgg  iseven.fsa  iseven.gc
chortest/chorgram/experiments/interesting_cases/: atm_iter_gmc.sys  choice.sgg  choice.sys
chortest/chorgram/experiments/pomcho/2020_discotec_tutorial/csl1/: global_view.sgg
chortest/chorgram/experiments/pomcho/2020_discotec_tutorial/csl3/: global_view.sgg
chortest/chorgram/experiments/pomcho/2020_discotec_tutorial/csl6/: global_view.sgg
chortest/chorgram/experiments/pomcho/7205_1617/: atm.sys  ct3.sgg  gchorloop.sgg  gchorset.sgg
chortest/chorgram/experiments/pomcho/7205_1718/: ct3_q2ii.sys  mockct3_q2ii.sys
chortest/chorgram/experiments/pomcho/aseq/: cfsmA.aut  cfsmB.aut  cfsmD.aut  in_sgg_parsed.txt
chortest/chorgram/experiments/revchor/: example.sgg  example1.sgg
chortest/chorgram/experiments/revchor/example1/: cfsmA.aut  cfsmB.aut  cfsmC.aut  in_sgg_parsed.txt
chortest/chorgram/experiments/sgg_examples/: aseq.sgg  atm.sgg  bra.sgg  braLoop.sgg  choice.sgg  claudio_parloop.sgg  exCOORD17.sgg  exICEfig3a.sgg  exICEfig3b.sgg  exICEfig3c.sgg  exICEfig3d.sgg  exICEfig3e.sgg  exPOPL.sgg  ggdef.sgg  loop.sgg  nestedLoop.sgg  par.sgg  parLoop.sgg  parpar.sgg  pingpong.sgg  two_buyers_protocol.sgg
chortest/chorgram/experiments/topdown/b2b/: shipping.gc
chortest/chorgram/tests/: test_chorgram.py  test_pomcho.py
chortest/chorgram/tests/syntax/gc/: 01_interaction.gc  02_sequence_00.gc  02_sequence_01_trailing_error.gc  03_choice_01_no_selector.gc  03_choice_02_wb_fail.gc  03_choice_03_sequence.gc  04_parallel_01.gc  04_parallel_02_choice.gc  05_repeat.gc  06_atm_01_internal.gc  07_pingpong.gc
(+134 files in other folders)
