[tool.poetry]
name = "chortools"
version = "0.1.0"
description = "A set of tools for working with g-choreographies"
authors = ["Alex Coto <alexrc09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
inquirer = "^2.7.0"
rich = "^9.1.0"
lark = "^0.10.1"
Jinja2 = "^2.11.2"
networkx = "^2.5"
pygraphviz = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
black = "^20.8b1"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
