[tool.poetry]
name = "chortools"
version = "0.1.0"
description = "A set of tools for working with g-choreographies"
authors = ["Alex Coto <alexrc09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
inquirer = "^2.7.0"
rich = "^9.1.0"
lark = "^0.10.1"
Jinja2 = "^2.11.2"
networkx = "^2.5"
pygraphviz = "^1.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
black = "^20.8b1"
rope = "^0.18.0"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
ipykernel = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "src.chortools.main:main"