[tool.poetry]
name = "chortest"
version = "0.1.1"
description = "A set of tools for working with g-choreographies"
authors = ["Alex Coto <alexrc09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
inquirer = "^2.7.0"
rich = "^13.6.0"
Jinja2 = "^3.0.0"
networkx = "^2.5"
pygraphviz = "^1.6"
PyYAML = "^6.0.1"
streamlit = "^0.83.0"
numpy = "^1.24.2"
typed-ast = "^1.5.4"
mypy = "^1.2.0"
lark = "^1.1.5"
hypothesis = "^6.87.1"
coverage = "^7.3.2"
pytest-datadir = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
rope = "^0.18.0"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
ipykernel = "^5.4.2"
openpyxl = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chortest = "chortest.__main__:main"